--- a/app/assets/stylesheets/admin/layout.scss
+++ b/app/assets/stylesheets/admin/layout.scss
@@ -78,7 +78,7 @@ body {
 .col-md-8 {
   .lte-ie8 & {
     float: left;
-    width: 58%;
+    width: 55%;
   }
 }
 
